// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown should open popup 1`] = `
<div
  className="test-dropdown"
>
  <ForwardRef(IconButton)
    className="render-toggle"
    onClick={[Function]}
  />
  <Popover
    onClickOutside={[Function]}
    onClose={[Function]}
    position="bottom"
  >
    <div
      className="render-content"
    >
      render content
    </div>
  </Popover>
</div>
`;

exports[`Dropdown should render toggle button 1`] = `
<div
  className="test-dropdown"
>
  <ForwardRef(IconButton)
    className="render-toggle"
    onClick={[Function]}
  />
</div>
`;
